# platform.tools.asuite

./: .gitignore  Android.bp  OWNERS  OWNERS_ADTE_TEAM  PREUPLOAD.cfg  asuite.sh  asuite_run_unittests.py  preupload_hook_script.py  pylintrc
atest/: Android.bp  BUILD.bazel  INTEGRATION_TESTS  OWNERS  TEST_MAPPING  arg_parser.py  asuite_metrics.py  atest.py  atest_arg_parser.py  atest_arg_parser_unittest.py  atest_completion.py  atest_completion.sh  atest_configs.py  atest_decorator.py  atest_enum.py  atest_error.py  atest_execution_info.py  atest_execution_info_unittest.py  atest_flag_list_generator.py  atest_integration_tests.py  atest_main.py  atest_main_unittest.py  atest_metrics.py  atest_run_unittests.py  atest_script_help.sh  atest_tradefed.sh  atest_unittest.py  atest_unittests.xml  atest_utils.py  atest_utils_unittest.py  banner.py  banner_unittest.py  bazel_mode.py  bazel_mode_unittest.py  bug_detector.py  bug_detector_unittest.py  cc_test_filter_generator.py  cc_test_filter_generator_test.py  cli_translator.py  cli_translator_unittest.py  (+28 more)
atest/asuite_lib_test/: Android.bp  asuite_cc_client_test.py  asuite_lib_run_tests.py  asuite_metrics_test.py
atest/bazel/: OWNERS  atest_bazel_mode.md  bazelrc
atest/bazel/reporter/: Android.bp  BUILD.bazel
atest/bazel/resources/: WORKSPACE  bazel.sh  bazelrc  format_as_soong_module_name.cquery
atest/bazel/rules/: BUILD.bazel  common_settings.bzl  soong_prebuilt.bzl  tradefed_test.bzl  tradefed_test.sh.template  tradefed_test_aspects.bzl  tradefed_test_info.bzl
atest/bazel/runner/: Android.bp  jarjar-rules.txt
atest/bazel/scripts/: gen_workspace_archive.sh  gen_workspace_archive_test.sh
atest/ci/: atest_normal_mode_integration_test.sh
atest/coverage/: coverage.py  coverage_unittest.py
atest/docs/: developer_workflow.md
atest/integration_tests/: Android.bp  adevice_command_success_tests.py  adevice_integration_tests.py  atest_ci_tests.py  atest_ci_tests.sh  atest_ci_tests.xml  atest_command_success_tests.py  atest_command_verification_tests.py  atest_dry_run_diff_tests.py  atest_integration_test.py  atest_integration_tests.py  atest_integration_tests.xml  atest_test_archetype_integration_tests.py  bazel_mode_test.py  bazel_mode_test.xml  build_atest_integration_tests.sh  result_compare_test.py  run_atest_integration_tests.sh  snapshot.py  snapshot_unittest.py  split_build_test_script.py  split_build_test_script_config.xml
atest/integration_tests/device_android_test/: Android.bp
atest/integration_tests/device_cc_test/: Android.bp  device_cc_test.cpp
atest/integration_tests/deviceless_java_host_test/: Android.bp
atest/integration_tests/deviceless_java_test_host/: Android.bp
atest/integration_tests/deviceless_python_host_test/: Android.bp  deviceless_python_host_test.py
atest/integration_tests/deviceless_python_test_host/: Android.bp
atest/java/: Android.bp
atest/linux-x86/: atest
atest/logstorage/: atest_gcp_utils.py  atest_gcp_utils_unittest.py  log_uploader.py  log_uploader_unittest.py  logstorage_utils.py  logstorage_utils_unittest.py
atest/metrics/: clearcut_client.py  metrics.py  metrics_base.py  metrics_utils.py  metrics_utils_unittest.py
atest/proto/: file_md5.proto  internal_user_log.proto
atest/test_data/: test_commands.json  test_environ.json
atest/test_finders/: cache_finder.py  cache_finder_unittest.py  cc_test_filter_utils.py  example_finder.py  module_finder.py  module_finder_unittest.py  suite_plan_finder.py  suite_plan_finder_unittest.py  test_filter_utils.py  test_filter_utils_unittest.py  test_finder_base.py  test_finder_utils.py  test_finder_utils_unittest.py  test_info.py  test_info_unittest.py  tf_integration_finder.py  tf_integration_finder_unittest.py
atest/test_plans/: INTEGRATION_TESTS
atest/test_runners/: OWNERS  atest_tf_test_runner.py  atest_tf_test_runner_unittest.py  event_handler.py  event_handler_unittest.py  example_test_runner.py  mobly_test_runner.py  mobly_test_runner_unittest.py  regression_test_runner.py  roboleaf_launched.txt  roboleaf_test_runner.py  roboleaf_test_runner_unittest.py  robolectric_test_runner.py  robolectric_test_runner_unittest.py  suite_plan_test_runner.py  suite_plan_test_runner_unittest.py  test_runner_base.py  vts_tf_test_runner.py  vts_tf_test_runner_unittest.py
atest/tf_proto/: Android.bp
atest/tools/: Android.bp  atest_tools.py  atest_tools_unittest.py  indexing.py  indexing_unittest.py  singleton.py  start_avd.py  start_avd_unittest.py
atest/unittest_data/: KernelTest.xml.data  module-info.json  my_cc_test.cc
(+220 files in other folders)
